# CloudStack-Management-System

./: .gitignore  README.md  RUNNING_BOTH_BACKENDS.md
Backend/: .env.example  .gitignore  package.json  seedDummyData.js  server.js
Backend/config/: cloudProviders.js  cloudinary.js  database.js  passport.js
Backend/middleware/: auth.js  validator.js
Backend/models/: Alert.js  AutomationRule.js  CostRecord.js  MetricData.js  Snapshot.js  User.js  VM.js
Backend/routes/: alert.js  analytics.js  auth.js  automation.js  cost.js  monitoring.js  oauth.js  snapshot.js  vm.js
Backend/services/: awsService.js  azureService.js  costService.js  gcpService.js  monitoringService.js  scheduler.js  snapshotService.js
Backend/utils/: cache.js  emailService.js  logger.js
Backend_CPP/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  IMPLEMENTATION.md  INSTALL.md  README.md  build.sh
Backend_CPP/include/: controllers.h  crypto_utils.h  database_service.h  router.h  server.h  thread_pool.h  user.h
Backend_CPP/src/: main.cpp  router.cpp  server.cpp
Backend_CPP/src/controllers/: auth_controller.cpp  monitoring_controller.cpp  snapshot_controller.cpp  vm_controller.cpp
Backend_CPP/src/middleware/: auth_middleware.cpp
Backend_CPP/src/models/: user.cpp
Backend_CPP/src/services/: database_service.cpp  monitoring_service.cpp
Backend_CPP/src/utils/: jwt_util.cpp  thread_pool.cpp
Frontend/: .gitignore  index.html  package.json
Frontend/src/: App.jsx  index.css
ML/: .gitignore  generate_datasets.py  ml_api_server.py  requirements.txt  setup_and_train.sh  train_models.py
(+18 files in other folders)
